# fgoscdata

./: README.md  ce_bl.txt  ce_gacha.txt  extract_event.py  extract_fq.py  freequest.csv  get_data.py  get_quest_list.py  hash_battle.csv  hash_drop.json  hash_exp.csv  hash_replace.csv  item_bl.txt  make_event_quest.py  make_freequest.py  make_syuren_quest.py  name_alias.csv  pyproject.toml  shortname.csv  syurenquest.csv  update.py
data/csv/: apocrypha.csv  box2025.csv  cbc2019.csv  cbc2020.csv  cbc2021.csv  cbc2023.csv  cbc2024.csv  cbc2025.csv  chaldean_floralia.csv  dragon_catsle.csv  enmatei.csv  faerie_sugoroku.csv  fake.csv  fest2022.csv  fgoac.csv  grailfront2023.csv  gudaguda2020.csv  gudaguda2020r.csv  gudaguda2020raidr.csv  gudaguda2021.csv  gudaguda2022.csv  gudaguda2025.csv  hakken.csv  halloween2021.csv  halloween2022.csv  halloween2025.csv  holy_grail_war.csv  hunting_quest09.csv  hunting_quest10.csv  hunting_quest11_1.csv  hunting_quest11_2.csv  hunting_quest11_3.csv  hunting_quest11_4.csv  hunting_quest11_5.csv  hunting_quest11_6.csv  hunting_quest12.csv  hunting_quest13_1.csv  hunting_quest13_2.csv  hunting_quest13_3.csv  hunting_quest13_4.csv  (+52 more)
data/json/: apocrypha.json  box2025.json  cbc2021.json  cbc2023.json  cbc2024.json  cbc2025.json  chaldean_floralia.json  dragon_catsle.json  enmatei.json  faerie_sugoroku.json  fake.json  fest2022.json  fgoac.json  freequest.json  grailfront2023.json  gudaguda2020.json  gudaguda2020r.json  gudaguda2020raidr.json  gudaguda2021.json  gudaguda2022.json  gudaguda2025.json  hakken.json  halloween2021.json  (+65 more)
