[project]
name = "fgoscdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "opencv-contrib-python>=4.12.0.88",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "tinysegmenter>=0.4",
    "tqdm>=4.67.1",
]
